--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@
 
   Note: SCSS and SASS extensions both use the same preprocessor. The main difference is that the syntax in SCSS is easier to read. SCSS with brackets, where as SASS files are more like python
 
+  Note: The abstracts folder is for code that will not output any css. This will mostly be code like mixins, variables...
+
 */
 
 /**
