--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,21 +16,25 @@
   Note: SCSS and SASS extensions both use the same preprocessor. The main difference is that the syntax in SCSS is easier to read. SCSS with brackets, where as SASS files are more like python
 */
 
+
 /**
   Note: We are not using base/_base.scss
   SASS is smart enough to understand without us having to explicitly specify these values
 */
+
+// abstracts folder
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
-
+// base folder
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
-
+// components folder
 @import "components/button";
-
+// layout folder
+@import "layout/grid";
 @import "layout/header";
-
+// pages folder
 @import "pages/home";
