--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,33 @@
+// **************************** COLORS **************************** //
+
 /**
   Defining the colors that will be used in this file
 */
+
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
-
+// ---------- Other Colors ---------- //
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+// **************************** GRID **************************** //
+
+/**
+  114 rem is like a standard width used for a row
+  We use the max-width as this makes it easier to organize elements. Using the max-width will mean that we do not need to worry to much about how things will look on higher resolution displays
+*/
+
+$grid-width: 114rem;
+
+/**
+  This is the space between the rows
+*/
+
+$gutter-vertical: 8rem;
+
+/**
+  This is the space in between the columns
+*/
+
+$gutter-horizontal: 6rem;
