--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -38,3 +38,14 @@ body {
   color: $color-grey-dark;
   padding: 4rem;
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
