--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,14 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to right, #7ed56f, #28b485); }
+  /**
+    Applying the nice gradient color to the text
+  */
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  /**
+    Without displaying as the inline block, then text styling will span across the entire width of the page
+  */
+  display: inline-block; }
 
 /**
   
