Added animation to the heading secondary
Added a center-text utility class

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,18 @@ body {
     Combine this effect and color: transparent to add the nice gradient to the Text
   */
   -webkit-background-clip: text;
-  color: transparent; }
+  color: transparent;
+  letter-spacing: 0.2rem;
+  /**
+    Adding some animations so to make the text cooler when we hover
+  */
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
 
 /**
   
