Added a margin-bottom-8 Utility class

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,9 @@ body {
 .u-center-text {
   text-align: center; }
 
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 /**
   
   The link here is a pseudo class 
