--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -27,3 +27,6 @@ $gutter-vertical: 8rem;
   This is the space in between the columns
 */
 $gutter-horizontal: 6rem;
+
+// **************************** FONT SIZES **************************** //
+$default-font-size: 1.6rem;
