--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -29,7 +29,7 @@
       In this case, the after pseudo class will use this to align itself. 
     */
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
   }
   &--white {
     background-color: white;
@@ -79,5 +79,21 @@
       backwards - This will ensure that all the other CSS is applied before starting the animation,i.e, apply all the styles at 0% and then display the element by playing the animation with the  
     */
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 0.1rem solid $color-primary;
+    font-size: $default-font-size;
+  }
+
+  &.hover {
+  }
+  &:active {
   }
 }
