Finished adding the animatiopns to the Learn More button in the heading-tertiary section

--- a/css/style.css
+++ b/css/style.css
@@ -274,12 +274,22 @@ body {
     */
     animation-fill-mode: backwards; }
 
-.btn-text:link, .btn-text:visited {
-  color: #55c57a;
-  display: inline-block;
-  text-decoration: none;
-  border-bottom: 0.1rem solid #55c57a;
-  font-size: 1.6rem; }
+.btn-text {
+  transition: all 0.2s; }
+  .btn-text:link, .btn-text:visited {
+    color: #55c57a;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 0.1rem solid #55c57a;
+    font-size: 1.6rem; }
+  .btn-text:hover {
+    background-color: #55c57a;
+    color: #fff;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+    transform: translateY(-2px); }
+  .btn-text:active {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    transform: translateY(0px); }
 
 /**
   This will define all the grid like structures that will be used in the project
