--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,44 @@ body {
     transform: translateY(0px); }
 
 /**
+    This file will contain the styling for the photos used in the EXCITING TOURS FOR ADVENTUROUS PEOPLE section
+*/
+.composition {
+  position: relative;
+  /**
+      When we hover on composition and then on a composition photo, select all the children that are not directly under the mouse
+  */ }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 1rem;
+    /**
+        As soon as we set the position to absolute on an element, these elements wll be placed according to a reference and the reference is the first parent that it encounters
+    */
+    position: absolute;
+    transition: all 0.2s; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5 6rem rgba(0, 0, 0, 0.6);
+      z-index: 10;
+      /**
+          Adding the frame to the image
+      */
+      outline: 1.5rem solid #55c57a;
+      outline-offset: 2rem; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+/**
   This will define all the grid like structures that will be used in the project
 */
 .row {
