--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,7 @@
 @import "base/utilities";
 // components folder
 @import "components/button";
+@import "components/composition";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
