Added icons into this project Added the cards to the page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@
 // components folder
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box.scss";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
