Added a skew to the section-features to make it look more stylish

--- a/css/style.css
+++ b/css/style.css
@@ -461,4 +461,13 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg); }
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  /**
+    We are only trying to skew the background
+
+    This is why we use the & > * to select all the direct children of this element. We will then skew it back to look straight
+  */
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewy(7deg); }
