--- a/css/style.css
+++ b/css/style.css
@@ -349,26 +349,26 @@ body {
     transform: translateY(-3rem); }
 
 /**
-  This will define all the grid like structures that will be used in the project
+    This will define all the grid like structures that will be used in the project
 */
 .row {
   max-width: 114rem;
   /**
-    We are saying that the margin on top and bottom is 0. The margins left and right is auto
-    What this means is that CSS will automatically try to center the element
-  */
+        We are saying that the margin on top and bottom is 0. The margins left and right is auto
+        What this means is that CSS will automatically try to center the element
+    */
   margin: 0 auto;
   /**
-    We just want to make sure that there is no margin on the last row
-  */
+        We just want to make sure that there is no margin on the last row
+    */
   /**
-    Select based on partial class names.
-    Here we are selecting all the classes that will start off with col-
+        Select based on partial class names.
+        Here we are selecting all the classes that will start off with col-
 
-    ^= Any class that starts with the specified name
-    *= Any class that contains the specified name
-    $= Any class that ends with the specified name
-  */ }
+        ^= Any class that starts with the specified name
+        *= Any class that contains the specified name
+        $= Any class that ends with the specified name
+    */ }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
   .row::after {
@@ -392,8 +392,14 @@ body {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
     width: calc((100% - (2 *6rem)) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - (2 *6rem)) / 3) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - (3 *6rem)) / 4); }
+  .row .col-2-of-4 {
+    width: calc( 2 * ((100% - (3 *6rem)) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc( 3 * ((100% - (3 *6rem)) / 4) + (2 *6rem)); }
 
 /**
  . is used to select the custom classes 
